<resources>
    <string name="app_name">FinalProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="blankUsername">Please Enter your username</string>
    <string name="blankFirstName">Please enter your first name</string>
    <string name="blankLastName">Please enter your last name</string>
    <string name="blankPassword">Please enter your pasword</string>
    <string name="blankEmail">Please enter your pasword</string>
    <string name="invalidlogin">Invalid username or password</string>
    <string name="hostNotification">0</string>
    <string name="invitedNotification">Invited Events:  </string>
    <string name="viewEventsButton">See Events:  </string>
    <string name="myEvents">Hosted Events</string>
    <string name="upcomingEvents">Upcoming Events</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="usernameexist">Username already exists!</string>
    <string name="emailexist">Email already exists!</string>


    <string name="google_place_api">AIzaSyCXw03gl41z67U12Lp-QY3aHCyx_z8hLMU</string>
    <string name="action_settings">Settings</string>
    <string name="eventTitle">Event Title</string>
    <string name="eventDesc">Description</string>
    <string name="date">Date, Time</string>
    <string name="location">Location</string>
    <string name="info">More Info</string>
    <string name="createbtn">Create</string>
    <string name="title_activity_user_invite">userInvite</string>
    <string name="title_activity_event_summary">EventSummary</string>
    <string name="title_activity_test">test</string>
    <string name="logout">Logout</string>
    <string name="editEvent">Edit Event</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="summary">Summary</string>
    <string name="donebtn">Done</string>


</resources>